--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Aldo Ziflaj
 description:      I post stuff here ...
-disqus_shortname: hpstrtheme
+disqus_shortname: aldoziflaj
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
