--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ owner:
 background:       triangular.png
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
+google_analytics:   UA-57656825-2
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
