--- a/tl-website-89465325986451/bower.json
+++ b/tl-website-89465325986451/bower.json
@@ -14,6 +14,6 @@
     "fontawesome": "~4.3.0",
     "smooth-scroll": "https://github.com/cferdinandi/smooth-scroll.git",
     "theaterjs": "~1.4.2",
-    "ionicons": "~2.0.1",
+    "ionicons": "~2.0.1"
   }
 }
