--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url:              //aziflaj.github.io
 # Owner/author information
 owner:
   name:           Aldo Ziflaj
-  avatar:         aziflaj.jpg
+  avatar:         aziflaj.png
   #bio:            "My name is Aldo, and I'm trying to create a blog using Jekyll"
   email:          aldoziflaj95@gmail.com
   # Social networking links used in footer. Update and remove as you like.
