--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ bing_verify:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Europe/Tirane
 future:      true
-highlighter: rogue
+highlighter: rouge
 markdown:    kramdown
 gems:
   - jekyll-sitemap
