--- a/_config.yml
+++ b/_config.yml
@@ -11,16 +11,8 @@ urls:
       url: /about
     - text: Blog
       url: /blog
-    # - text: Gallery
-    #   url: /gallery
-    # - text: Shop
-    #   url : /shop
     - text: Contact Me
       url : /contact
-    # - text: Styleguide
-    #   url: /styleguide
-    # - text: Get Started
-    #   url: /get-started
 
 # Edit these details
 
@@ -195,12 +187,12 @@ paginate_path: "/blog/page/:num/"
 #     envs: ['development']
 
 # Archives
-# jekyll-archives:
-#   enabled:
-#     - categories
-#   layout: archive
-#   permalinks:
-#     category: '/category/:name/'
+jekyll-archives:
+  enabled:
+    - categories
+#  layout: archive
+  permalinks:
+    category: '/category/:name/'
 
 # Shop
 # collections:
@@ -221,6 +213,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-menus
+  - jekyll-archives
 
 
 # Exclude from processing.
