profile in site pics

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ urls:
 
 # Edit these details
 
-author_logo: profile.png
+author_logo: site/profile.png
 author: Aldo Ziflaj
 # author_bio: 
 author_email: "aldoziflaj95@gmail.com"
