damn ngrok can't serve styles

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author: Aldo Ziflaj
 author_email: "aldoziflaj95@gmail.com"
 author_location: Berlin, DE
 author_website_url: "https://aziflaj.github.io"
-typewrite-text: "Result-driven Senior Software Engineer"
+typewrite-text: "Result-Driven Senior Software Engineer"
 
 # Experiences
 author_work_experiences:
