--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,8 @@ languageCode = 'en-us'
 title = "Aldo's Brain Juice, Condensed in Human Words."
 theme = 'terminal'
 
+buildFuture = true
+
 disqusShortname = 'aldoziflaj'
 
 [params]
