--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "Aldo's Brain Juice, Condensed in Human Words."
 theme = 'terminal'
 
 disqusShortname = 'aldoziflaj'
+googleAnalytics = 'G-ZMWD0LX3M8'
 
 [params]
   # dir name of your main content (default is `content/posts`).
