--- a/themes/terminal/package.json
+++ b/themes/terminal/package.json
@@ -21,11 +21,13 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-stage-2": "^7.0.0",
     "angular-html-parser": "^1.2.0",
+    "ansi-regex": "4.1.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.5",
     "browserslist": "^4.16.5",
     "clean-webpack-plugin": "^3.0.0",
     "clipboard": "^2.0.4",
+    "color-string": "1.5.5",
     "css-loader": "^5.1.3",
     "cssnano": "^5.0.8",
     "eslint-config-airbnb": "^18.2.0",
@@ -34,7 +36,7 @@
     "file-loader": "^6.1.0",
     "husky": "^5.1.3",
     "mini-css-extract-plugin": "^1.3.9",
-    "postcss": "^8.2.10",
+    "postcss": "7.0.36",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-cli": "^8.3.1",
     "postcss-color-function": "^4.0.1",
