--- a/config.toml
+++ b/config.toml
@@ -50,11 +50,11 @@ googleAnalytics = 'G-ZMWD0LX3M8'
 
   # whether to show a table of contents
   # can be overridden in a page's front-matter
-  # Toc = false # default
+  Toc = true # default
 
   # set title for the table of contents
   # can be overridden in a page's front-matter
-  # TocTitle = "Table of Contents" # default
+  TocTitle = " " # default
 
 
 # [params.twitter]
@@ -63,6 +63,11 @@ googleAnalytics = 'G-ZMWD0LX3M8'
 #   # do not include @
 #   creator = ""
 #   site = ""
+
+[markup]
+  [markup.tableOfContents]
+    startLevel = 2
+    ordered = false
 
 [languages]
   [languages.en]
